fix(plugin): Custom Tooltip should append className when provided - when user adds a `className` to SlickCustomTooltip, it was overriding the default class name and by doing so, it was breaking the CSS styling because the CSS Theme still expect the default CSS class name, so we need to append to the default instead of overriding it - also fix a few more Dark Mode styling and provide alternate colors for Tooltip demo in Dark Mode - also add alternate colors to `text-color-primary` and `text-color-secondary` for Dark Mode

--- a/examples/vite-demo-vanilla-bundle/src/styles.scss
+++ b/examples/vite-demo-vanilla-bundle/src/styles.scss
@@ -104,12 +104,3 @@ input.is-narrow {
 .text-red {
   color: red;
 }
-.text-primary {
-  color: #006DCC;
-}
-
-.dark-mode {
-  .text-primary {
-    color: #66b8ff;
-  }
-}
